@@ -13,6 +13,8 @@ Revision history for Gimp-Perl extension.
           collisions. CGI-scripts should use either tcp or specify the path
           directly using GIMP_HOST (see Gimp::Net for details).
         - use _much_ saner defaults for the Scale types in Gimp::Fu.
+        - Gimp::Fu's optionmenus didn't work in net()-mode.
+        - implemented PF_CUSTOM (untested).
         
 1.055 Mon Feb 22 22:38:44 CET 1999
 	- applied seth's script changes.
